# FlatOS

./: .dockerignore  .gitignore  README.md
printer-service/: .gitignore  Cargo.toml  README.md  build_deb_arm64.sh  build_lichee.sh
printer-service/debian/: config  postinst  postrm  service  templates
printer-service/src/: main.rs
web-service/: Dockerfile  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web-service/drizzle/: 0001_dear_mandrill.sql  0004_elite_gideon.sql  0004_thin_ultimatum.sql
web-service/drizzle/meta/: 0004_snapshot.json  _journal.json
web-service/scripts/: cron-scheduler.mjs  custom-server.mjs  migrate.mjs  server-wrapper.mjs  start.sh
web-service/src/app/: globals.css
web-service/src/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx  page.tsx
web-service/src/components/: AutopaymentHelper.tsx  BalanceAuditPanel.tsx  PaymentHistoryChart.tsx  PaymentStatusCard.tsx  PaymentSummaryStats.tsx  ReceiptPreview.tsx  RecentTransactions.tsx  Sidebar.tsx  SyncButton.tsx  TransactionDetailModal.tsx  TransactionList.tsx  TransactionRow.tsx  WeekDatePicker.tsx  WeekRow.tsx  WeekStatusIcon.tsx  WeekTransactionsModal.tsx
web-service/src/components/expenses/: ExpenseCategoryCard.tsx  ExpenseChart.tsx  ExpenseTransactionList.tsx  (+1 more)
web-service/src/lib/: actions.ts  akahu.ts  audit.ts  auth.ts  calculations.ts  constants.ts  cron-auth.ts  expense-actions.ts  expense-calculations.ts  expense-matching.ts  matching.ts  printer-token.ts  receipt-formatter.ts  schedule-utils.ts  sync.ts  utils.ts  weekly-view.ts
(+31 files in other folders)
