[package]
name = "printer-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
escpos = { version = "0.17.0", features = ["native_usb"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
url = "2.4"
nusb = "0.2.1"
rustls = "0.23.36"
